--- a/READ-HTML.htm
+++ b/READ-HTML.htm
@@ -640,7 +640,7 @@ w\:* {behavior:url(#default#VML);}
 	mso-font-charset:0;
 	mso-generic-font-family:roman;
 	mso-font-pitch:variable;
-	mso-font-signature:-536869121 1107305727 33554432 0 415 0;}
+	mso-font-signature:3 0 0 0 1 0;}
 @font-face
 	{font-family:Calibri;
 	panose-1:2 15 5 2 2 2 4 3 2 4;
@@ -953,6 +953,9 @@ div.WordSection1
  <tr style='mso-yfti-irow:18'>
   <td width=720 colspan=17 valign=top style='width:7.5in;padding:0in 5.75pt 0in 5.75pt'>
   <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
+  text-align:center;line-height:normal'><b><span style='font-size:8.0pt;
+  mso-bidi-font-size:24.0pt;font-family:"Georgia",serif;color:#861F41'><o:p>&nbsp;</o:p></span></b></p>
+  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
   text-align:center;line-height:normal'><b><span style='font-size:24.0pt;
   font-family:"Georgia",serif;color:#861F41'>C/COL <span class=SpellE>Pramenko’s</span>
   Command Philosophy</span></b></p>
@@ -961,44 +964,52 @@ div.WordSection1
  <tr style='mso-yfti-irow:19'>
   <td width=720 colspan=17 valign=top style='width:7.5in;padding:0in 5.75pt 0in 5.75pt'>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal'><a name="_Hlk535688776"><span style='font-size:12.0pt;font-family:
-  "Georgia",serif'><o:p>&nbsp;</o:p></span></a></p>
-  <p class=MsoNormal><span style='font-size:12.0pt;mso-bidi-font-size:11.0pt;
-  line-height:105%;font-family:"Georgia",serif'>I am honored to serve as your
-  Regimental Commander for the Spring Semester of 2019.<span
-  style='mso-spacerun:yes'>  </span>I am proud to be part of an organization
-  that is dedicated and willing to become business <span class=GramE>professionals,
-  or</span> do what less than 0.5% of the population will do—serve and protect
-  our country. </span><span style='font-size:12.0pt;mso-bidi-font-size:11.0pt;
-  line-height:105%;font-family:"Georgia",serif;mso-fareast-font-family:Calibri;
-  mso-fareast-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";
-  mso-bidi-theme-font:minor-bidi'><o:p></o:p></span></p>
-  <p class=MsoNormal><span style='font-size:12.0pt;mso-bidi-font-size:11.0pt;
-  line-height:105%;font-family:"Georgia",serif'>My Command Philosophy serves as
-  the foundation to ensure we complete the Mission of the VTCC which is to <i
+  normal'><a name="_Hlk535688776"></a><span style='font-size:12.0pt;font-family:
+  "Georgia",serif'><o:p>&nbsp;</o:p></span></p>
+  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt'><span
+  style='font-size:12.0pt;mso-bidi-font-size:11.0pt;line-height:105%;
+  font-family:"Georgia",serif'>I am honored to serve as your Regimental
+  Commander for the Spring Semester of 2019.<span style='mso-spacerun:yes'> 
+  </span>I am proud to be part of an organization that is dedicated and willing
+  to become business <span class=GramE>professionals, or</span> do what less
+  than 0.5% of the population will do—serve and protect our country. </span><span
+  style='font-size:12.0pt;mso-bidi-font-size:11.0pt;line-height:105%;
+  font-family:"Georgia",serif;mso-fareast-font-family:Calibri;mso-fareast-theme-font:
+  minor-latin;mso-bidi-font-family:"Times New Roman";mso-bidi-theme-font:minor-bidi'><o:p></o:p></span></p>
+  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt'><span
+  style='font-size:12.0pt;mso-bidi-font-size:11.0pt;line-height:105%;
+  font-family:"Georgia",serif'>My Command Philosophy serves as the foundation
+  to ensure we complete the Mission of the VTCC which is to <i
   style='mso-bidi-font-style:normal'>graduate leaders of exemplary character
   who are instilled with the values and skills essential for leadership success
   in service to the nation.</i><span style='mso-spacerun:yes'>  </span>This
   guidance provides focus for our team’s development of this exemplary
   character.<o:p></o:p></span></p>
-  <p class=MsoNormal><b style='mso-bidi-font-weight:normal'><span
+  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt'><b
+  style='mso-bidi-font-weight:normal'><span style='font-size:12.0pt;mso-bidi-font-size:
+  11.0pt;line-height:105%;font-family:"Georgia",serif'><o:p>&nbsp;</o:p></span></b></p>
+  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt'><b
+  style='mso-bidi-font-weight:normal'><span style='font-size:12.0pt;mso-bidi-font-size:
+  11.0pt;line-height:105%;font-family:"Georgia",serif'>Humility</span></b><span
   style='font-size:12.0pt;mso-bidi-font-size:11.0pt;line-height:105%;
-  font-family:"Georgia",serif'>Humility</span></b><span style='font-size:12.0pt;
-  mso-bidi-font-size:11.0pt;line-height:105%;font-family:"Georgia",serif'>- <span
-  style='background:white'>“There is nothing noble in being superior to your
-  fellow man; true nobility is being superior to your former self.” -Ernest
-  Hemmingway - Humility is not a permanent characteristic. Every day we make
-  decisions that are fueled by a temptation of ego. As leaders we must be aware
-  of our self-centered motives and strive to serve others before
-  ourselves.<span style='mso-spacerun:yes'>  </span></span></span><span
-  style='font-size:12.0pt;mso-bidi-font-size:11.0pt;line-height:105%;
-  font-family:"Georgia",serif;mso-fareast-font-family:Calibri;mso-fareast-theme-font:
-  minor-latin;mso-bidi-font-family:"Times New Roman";mso-bidi-theme-font:minor-bidi;
-  background:white'><o:p></o:p></span></p>
-  <p class=MsoNormal><b style='mso-bidi-font-weight:normal'><span
-  style='font-size:12.0pt;mso-bidi-font-size:11.0pt;line-height:105%;
-  font-family:"Georgia",serif;mso-fareast-font-family:"Times New Roman";
-  mso-bidi-font-family:"Times New Roman"'>Honesty</span></b><span
+  font-family:"Georgia",serif'>- <span style='background:white'>“There is
+  nothing noble in being superior to your fellow man; true nobility is being
+  superior to your former self.” -Ernest Hemmingway - Humility is not a
+  permanent characteristic. Every day we make decisions that are fueled by a
+  temptation of ego. As leaders we must be aware of our self-centered motives
+  and strive to serve others before ourselves.<span style='mso-spacerun:yes'> 
+  </span></span></span><span style='font-size:12.0pt;mso-bidi-font-size:11.0pt;
+  line-height:105%;font-family:"Georgia",serif;mso-fareast-font-family:Calibri;
+  mso-fareast-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";
+  mso-bidi-theme-font:minor-bidi;background:white'><o:p></o:p></span></p>
+  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt'><b
+  style='mso-bidi-font-weight:normal'><span style='font-size:12.0pt;mso-bidi-font-size:
+  11.0pt;line-height:105%;font-family:"Georgia",serif;mso-fareast-font-family:
+  "Times New Roman";mso-bidi-font-family:"Times New Roman"'><o:p>&nbsp;</o:p></span></b></p>
+  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt'><b
+  style='mso-bidi-font-weight:normal'><span style='font-size:12.0pt;mso-bidi-font-size:
+  11.0pt;line-height:105%;font-family:"Georgia",serif;mso-fareast-font-family:
+  "Times New Roman";mso-bidi-font-family:"Times New Roman"'>Honesty</span></b><span
   style='font-size:12.0pt;mso-bidi-font-size:11.0pt;line-height:105%;
   font-family:"Georgia",serif;mso-fareast-font-family:"Times New Roman";
   mso-bidi-font-family:"Times New Roman"'> –</span><span style='font-size:12.0pt;
@@ -1012,16 +1023,20 @@ div.WordSection1
   mso-bidi-font-family:"Times New Roman"'>By telling the truth, subordinates
   will respect and trust you which will ultimately lift the morale and
   efficiency of the VTCC.<o:p></o:p></span></p>
-  <p class=MsoNormal><b style='mso-bidi-font-weight:normal'><span
+  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt'><b
+  style='mso-bidi-font-weight:normal'><span style='font-size:12.0pt;mso-bidi-font-size:
+  11.0pt;line-height:105%;font-family:"Georgia",serif'><o:p>&nbsp;</o:p></span></b></p>
+  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt'><b
+  style='mso-bidi-font-weight:normal'><span style='font-size:12.0pt;mso-bidi-font-size:
+  11.0pt;line-height:105%;font-family:"Georgia",serif'>Hunger</span></b><span
   style='font-size:12.0pt;mso-bidi-font-size:11.0pt;line-height:105%;
-  font-family:"Georgia",serif'>Hunger</span></b><span style='font-size:12.0pt;
-  mso-bidi-font-size:11.0pt;line-height:105%;font-family:"Georgia",serif'> - </span><span
-  style='font-size:12.0pt;mso-bidi-font-size:11.0pt;line-height:105%;
-  font-family:"Georgia",serif;mso-bidi-font-family:Arial;background:white'>“<span
-  style='mso-bidi-font-weight:bold'>The capacity to learn is a gift</span>;&nbsp;<span
-  style='mso-bidi-font-weight:bold'>the ability to learn</span>&nbsp;is a skill;
-  the willingness to&nbsp;<span style='mso-bidi-font-weight:bold'>learn</span>&nbsp;is
-  a choice.” – Brian Herbert.<span style='mso-spacerun:yes'>   </span></span><span
+  font-family:"Georgia",serif'> - </span><span style='font-size:12.0pt;
+  mso-bidi-font-size:11.0pt;line-height:105%;font-family:"Georgia",serif;
+  mso-bidi-font-family:Arial;background:white'>“<span style='mso-bidi-font-weight:
+  bold'>The capacity to learn is a gift</span>;&nbsp;<span style='mso-bidi-font-weight:
+  bold'>the ability to learn</span>&nbsp;is a skill; the willingness to&nbsp;<span
+  style='mso-bidi-font-weight:bold'>learn</span>&nbsp;is a choice.” – Brian
+  Herbert.<span style='mso-spacerun:yes'>   </span></span><span
   style='font-size:12.0pt;mso-bidi-font-size:11.0pt;line-height:105%;
   font-family:"Georgia",serif'>Leaders must constantly be developing their
   professionalism, character, academic knowledge, and skills. Some of this
@@ -1032,14 +1047,18 @@ div.WordSection1
   getting answers, and making decisions. Don’t wait for someone to help
   you…seek help and knowledge. Be hungry to become a life-long learner.<span
   style='mso-spacerun:yes'>  </span><o:p></o:p></span></p>
-  <p class=MsoNormal><span style='font-size:12.0pt;mso-bidi-font-size:11.0pt;
-  line-height:105%;font-family:"Georgia",serif'>Our priorities are simple;
-  succeed in school, commission or become a business professional, and become
-  leaders of exemplary character.<span style='mso-spacerun:yes'>  </span>Not
-  only are we accountable for our own actions, but also for the actions of our
-  peers and subordinates.<span style='mso-spacerun:yes'>  </span>We have a duty
-  to uphold the quality and honor of our Virginia Tech Corps of Cadets and each
-  of us must have the courage to do so. <o:p></o:p></span></p>
+  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt'><span
+  style='font-size:12.0pt;mso-bidi-font-size:11.0pt;line-height:105%;
+  font-family:"Georgia",serif'><o:p>&nbsp;</o:p></span></p>
+  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt'><span
+  style='font-size:12.0pt;mso-bidi-font-size:11.0pt;line-height:105%;
+  font-family:"Georgia",serif'>Our priorities are simple; succeed in school,
+  commission or become a business professional, and become leaders of exemplary
+  character.<span style='mso-spacerun:yes'>  </span>Not only are we accountable
+  for our own actions, but also for the actions of our peers and
+  subordinates.<span style='mso-spacerun:yes'>  </span>We have a duty to uphold
+  the quality and honor of our Virginia Tech Corps of Cadets and each of us
+  must have the courage to do so. <o:p></o:p></span></p>
   <p class=MsoNormal><span style='font-size:12.0pt;mso-bidi-font-size:11.0pt;
   line-height:105%;font-family:"Georgia",serif'><o:p>&nbsp;</o:p></span></p>
   <p class=MsoNormal><span style='font-size:12.0pt;mso-bidi-font-size:11.0pt;
@@ -1702,8 +1721,8 @@ div.WordSection1
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
   normal'><span style='font-size:12.0pt;font-family:"Georgia",serif'>In an
   effort to promote and encourage academic integrity among our students, the
-  Office of Undergraduate Academic Integrity will be sponsoring “Understanding
-  the Virginia Tech Honor Code” sessions. During these interactive sessions
+  Office of Undergraduate Academic Integrity will be sponsoring “Understanding the
+  Virginia Tech Honor Code” sessions. During these interactive sessions
   students will learn what constitutes an Honor Code violation, various
   strategies to avoid violations, and campus resources that are available to
   assist them with their academic work. These sessions are a great way for
@@ -1726,8 +1745,8 @@ div.WordSection1
   normal'><span style='font-size:12.0pt;font-family:"Georgia",serif'>Wednesday,
   January 30, 2019: 6:30 p.m.-8:00 p.m. in the Graduate Life Center Auditorium</span></p>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-size:12.0pt;font-family:"Georgia",serif'>Thursday,
-  January 31, 2019: 6:30 p.m.-8:00 p.m. in the Graduate Life Center Auditorium</span></p>
+  normal'><span style='font-size:12.0pt;font-family:"Georgia",serif'>Thursday, January
+  31, 2019: 6:30 p.m.-8:00 p.m. in the Graduate Life Center Auditorium</span></p>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
   normal'><span style='font-size:12.0pt;font-family:"Georgia",serif'>Friday,
   February 1, 2019: 6:30 p.m. -8:00 p.m. in the Graduate Life Center Auditorium</span></p>
@@ -2077,20 +2096,20 @@ div.WordSection1
   Article 9, Failure to Obey; Article 25, Conduct Unbecoming a Cadet; and
   Article 26, General Article.<span style='mso-spacerun:yes'>  </span>The cadet
   pled Guilty to all charges.<span style='mso-spacerun:yes'>  </span>The
-  hearing officer agreed, stemming from a pattern of substandard and
-  uncorrected performance.<span style='mso-spacerun:yes'>  </span>The following
-  sanctions were awarded:<span style='mso-spacerun:yes'>  </span>Dismissal from
-  VTCC with provision to petition to return NET spring 2020 (set aside); 3
-  weekends restriction; Military Probation for one semester. <o:p></o:p></span></p>
+  hearing officer agreed, stemming from a pattern of substandard and uncorrected
+  performance.<span style='mso-spacerun:yes'>  </span>The following sanctions
+  were awarded:<span style='mso-spacerun:yes'>  </span>Dismissal from VTCC with
+  provision to petition to return NET spring 2020 (set aside); 3 weekends
+  restriction; Military Probation for one semester. <o:p></o:p></span></p>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
   normal'><span style='font-size:10.0pt;font-family:"Georgia",serif'><o:p>&nbsp;</o:p></span></p>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-size:10.0pt;font-family:"Georgia",serif'>An Executive
-  Committee Hearing convened 5 Dec 18 for a senior cadet charged with violating
-  VTCC Article 3, Conspiracy; Article 14, Perjury; Article 25, Conduct
-  Unbecoming a Cadet; Article 26, General Article, and Article 29, Visitation
-  Violation.<span style='mso-spacerun:yes'>  </span>The cadet pled Guilty to
-  Articles 25 and 26, and Not Guilty to Articles 3, 14, and 29.<span
+  normal'><span style='font-size:10.0pt;font-family:"Georgia",serif'>An
+  Executive Committee Hearing convened 5 Dec 18 for a senior cadet charged with
+  violating VTCC Article 3, Conspiracy; Article 14, Perjury; Article 25,
+  Conduct Unbecoming a Cadet; Article 26, General Article, and Article 29,
+  Visitation Violation.<span style='mso-spacerun:yes'>  </span>The cadet pled
+  Guilty to Articles 25 and 26, and Not Guilty to Articles 3, 14, and 29.<span
   style='mso-spacerun:yes'>  </span>The Committee determined Not Guilty of
   Article 3 and Guilty on all others.<span style='mso-spacerun:yes'> 
   </span>The following sanctions were awarded:<span style='mso-spacerun:yes'> 
