--- a/READ-HTML.htm
+++ b/READ-HTML.htm
@@ -23,8 +23,6 @@ w\:* {behavior:url(#default#VML);}
 <link rel=colorSchemeMapping href="READ-HTML_files/colorschememapping.xml">
 <!--[if gte mso 9]><xml>
  <w:WordDocument>
-  <w:SpellingState>Clean</w:SpellingState>
-  <w:GrammarState>Clean</w:GrammarState>
   <w:TrackMoves>false</w:TrackMoves>
   <w:TrackFormatting/>
   <w:ValidateAgainstSchemas/>
@@ -737,12 +735,6 @@ span.Style2
 	font-family:"Georgia",serif;
 	mso-ascii-font-family:Georgia;
 	mso-hansi-font-family:Georgia;}
-span.SpellE
-	{mso-style-name:"";
-	mso-spl-e:yes;}
-span.GramE
-	{mso-style-name:"";
-	mso-gram-e:yes;}
 .MsoChpDefault
 	{mso-style-type:export-only;
 	mso-default-props:yes;
@@ -957,8 +949,8 @@ div.WordSection1
   mso-bidi-font-size:24.0pt;font-family:"Georgia",serif;color:#861F41'><o:p>&nbsp;</o:p></span></b></p>
   <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
   text-align:center;line-height:normal'><b><span style='font-size:24.0pt;
-  font-family:"Georgia",serif;color:#861F41'>C/COL <span class=SpellE>Pramenko’s</span>
-  Command Philosophy</span></b></p>
+  font-family:"Georgia",serif;color:#861F41'>C/COL Pramenko’s Command
+  Philosophy</span></b></p>
   </td>
  </tr>
  <tr style='mso-yfti-irow:19'>
@@ -971,11 +963,14 @@ div.WordSection1
   font-family:"Georgia",serif'>I am honored to serve as your Regimental
   Commander for the Spring Semester of 2019.<span style='mso-spacerun:yes'> 
   </span>I am proud to be part of an organization that is dedicated and willing
-  to become business <span class=GramE>professionals, or</span> do what less
-  than 0.5% of the population will do—serve and protect our country. </span><span
+  to become business professionals, or do what less than 0.5% of the population
+  will do—serve and protect our country. </span><span style='font-size:12.0pt;
+  mso-bidi-font-size:11.0pt;line-height:105%;font-family:"Georgia",serif;
+  mso-fareast-font-family:Calibri;mso-fareast-theme-font:minor-latin;
+  mso-bidi-font-family:"Times New Roman";mso-bidi-theme-font:minor-bidi'><o:p></o:p></span></p>
+  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt'><span
   style='font-size:12.0pt;mso-bidi-font-size:11.0pt;line-height:105%;
-  font-family:"Georgia",serif;mso-fareast-font-family:Calibri;mso-fareast-theme-font:
-  minor-latin;mso-bidi-font-family:"Times New Roman";mso-bidi-theme-font:minor-bidi'><o:p></o:p></span></p>
+  font-family:"Georgia",serif'><o:p>&nbsp;</o:p></span></p>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt'><span
   style='font-size:12.0pt;mso-bidi-font-size:11.0pt;line-height:105%;
   font-family:"Georgia",serif'>My Command Philosophy serves as the foundation
@@ -1015,9 +1010,9 @@ div.WordSection1
   mso-bidi-font-family:"Times New Roman"'> –</span><span style='font-size:12.0pt;
   mso-bidi-font-size:11.0pt;line-height:105%;font-family:"Georgia",serif;
   mso-bidi-font-family:Arial;background:white'>Anyone who can be trusted in
-  little matters can also be trusted in important matters. As leaders, we must
-  strive to be honest in every aspect of our life. Leadership is fundamentally
-  based on trust. Without it, the mission will not be accomplished. </span><span
+  little matters can also be trusted in important matters. As leaders, we must strive
+  to be honest in every aspect of our life. Leadership is fundamentally based
+  on trust. Without it, the mission will not be accomplished. </span><span
   style='font-size:12.0pt;mso-bidi-font-size:11.0pt;line-height:105%;
   font-family:"Georgia",serif;mso-fareast-font-family:"Times New Roman";
   mso-bidi-font-family:"Times New Roman"'>By telling the truth, subordinates
@@ -1043,10 +1038,10 @@ div.WordSection1
   development can be acquired through the VTCC, but whenever possible, strive
   to become a more “well- rounded” leader. Attend professional development
   classes, join an academic club, attend a leadership conference, and read
-  books. Each of us is responsible for <span class=GramE>taking action</span>,
-  getting answers, and making decisions. Don’t wait for someone to help
-  you…seek help and knowledge. Be hungry to become a life-long learner.<span
-  style='mso-spacerun:yes'>  </span><o:p></o:p></span></p>
+  books. Each of us is responsible for taking action, getting answers, and
+  making decisions. Don’t wait for someone to help you…seek help and knowledge.
+  Be hungry to become a life-long learner.<span style='mso-spacerun:yes'> 
+  </span><o:p></o:p></span></p>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt'><span
   style='font-size:12.0pt;mso-bidi-font-size:11.0pt;line-height:105%;
   font-family:"Georgia",serif'><o:p>&nbsp;</o:p></span></p>
@@ -1720,8 +1715,8 @@ div.WordSection1
   normal'><span style='font-size:12.0pt;font-family:"Georgia",serif'>&nbsp;</span></p>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
   normal'><span style='font-size:12.0pt;font-family:"Georgia",serif'>In an
-  effort to promote and encourage academic integrity among our students, the
-  Office of Undergraduate Academic Integrity will be sponsoring “Understanding the
+  effort to promote and encourage academic integrity among our students, the Office
+  of Undergraduate Academic Integrity will be sponsoring “Understanding the
   Virginia Tech Honor Code” sessions. During these interactive sessions
   students will learn what constitutes an Honor Code violation, various
   strategies to avoid violations, and campus resources that are available to
@@ -1745,16 +1740,16 @@ div.WordSection1
   normal'><span style='font-size:12.0pt;font-family:"Georgia",serif'>Wednesday,
   January 30, 2019: 6:30 p.m.-8:00 p.m. in the Graduate Life Center Auditorium</span></p>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-size:12.0pt;font-family:"Georgia",serif'>Thursday, January
-  31, 2019: 6:30 p.m.-8:00 p.m. in the Graduate Life Center Auditorium</span></p>
+  normal'><span style='font-size:12.0pt;font-family:"Georgia",serif'>Thursday,
+  January 31, 2019: 6:30 p.m.-8:00 p.m. in the Graduate Life Center Auditorium</span></p>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
   normal'><span style='font-size:12.0pt;font-family:"Georgia",serif'>Friday,
   February 1, 2019: 6:30 p.m. -8:00 p.m. in the Graduate Life Center Auditorium</span></p>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
   normal'><span style='font-size:12.0pt;font-family:"Georgia",serif'>&nbsp;</span></p>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-size:12.0pt;font-family:"Georgia",serif'>Students
-  who plan to attend a session will need to pre-register by emailing
+  normal'><span style='font-size:12.0pt;font-family:"Georgia",serif'>Students who
+  plan to attend a session will need to pre-register by emailing
   honorsys@vt.edu at least one hour prior to the session.</span></p>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
   normal'><span style='font-size:12.0pt;font-family:"Georgia",serif'>&nbsp;</span></p>
@@ -2096,20 +2091,20 @@ div.WordSection1
   Article 9, Failure to Obey; Article 25, Conduct Unbecoming a Cadet; and
   Article 26, General Article.<span style='mso-spacerun:yes'>  </span>The cadet
   pled Guilty to all charges.<span style='mso-spacerun:yes'>  </span>The
-  hearing officer agreed, stemming from a pattern of substandard and uncorrected
-  performance.<span style='mso-spacerun:yes'>  </span>The following sanctions
-  were awarded:<span style='mso-spacerun:yes'>  </span>Dismissal from VTCC with
-  provision to petition to return NET spring 2020 (set aside); 3 weekends
-  restriction; Military Probation for one semester. <o:p></o:p></span></p>
+  hearing officer agreed, stemming from a pattern of substandard and
+  uncorrected performance.<span style='mso-spacerun:yes'>  </span>The following
+  sanctions were awarded:<span style='mso-spacerun:yes'>  </span>Dismissal from
+  VTCC with provision to petition to return NET spring 2020 (set aside); 3
+  weekends restriction; Military Probation for one semester. <o:p></o:p></span></p>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
   normal'><span style='font-size:10.0pt;font-family:"Georgia",serif'><o:p>&nbsp;</o:p></span></p>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-size:10.0pt;font-family:"Georgia",serif'>An
-  Executive Committee Hearing convened 5 Dec 18 for a senior cadet charged with
-  violating VTCC Article 3, Conspiracy; Article 14, Perjury; Article 25,
-  Conduct Unbecoming a Cadet; Article 26, General Article, and Article 29,
-  Visitation Violation.<span style='mso-spacerun:yes'>  </span>The cadet pled
-  Guilty to Articles 25 and 26, and Not Guilty to Articles 3, 14, and 29.<span
+  normal'><span style='font-size:10.0pt;font-family:"Georgia",serif'>An Executive
+  Committee Hearing convened 5 Dec 18 for a senior cadet charged with violating
+  VTCC Article 3, Conspiracy; Article 14, Perjury; Article 25, Conduct
+  Unbecoming a Cadet; Article 26, General Article, and Article 29, Visitation
+  Violation.<span style='mso-spacerun:yes'>  </span>The cadet pled Guilty to
+  Articles 25 and 26, and Not Guilty to Articles 3, 14, and 29.<span
   style='mso-spacerun:yes'>  </span>The Committee determined Not Guilty of
   Article 3 and Guilty on all others.<span style='mso-spacerun:yes'> 
   </span>The following sanctions were awarded:<span style='mso-spacerun:yes'> 
