Added Plan of the Day container page
changed index2 name

--- a/dayPlan.htm
+++ b/dayPlan.htm
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html lang="">
 
 <head>
   <meta charset="utf-8">
@@ -25,16 +25,16 @@
   gtag('config', 'UA-132849951-1');
 </script>
 
-<script src="jquery-3.3.1.min.js"></script>
+<script src="js/vendor/jquery-3.3.1.min.js"></script>
     <script>
     $(function(){
-      $("#includedContent").load("POD-HTML.htm");
+      $("#includedContent").load("https://vtcc-ros.github.io/POD-HTML.htm");
     });
     </script>
 
 </head>
 
-<body style="background-color:#2C313F;">
+<body style="background-color:#FFFFFF;">
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
