--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
   <img src="coverphoto.jpg" width="960" height="575" title="Sunrise on the VT"
   alt="Sunrise on the VT. From the Commandant's facebook page." class="opaque imgScale">
   <div class="imgTopLeft">
-  <a style="color:white;font-family:georgia;font-size:125%" href="POD-HTML.htm"> Current Plan of the Day</a>
+  <a style="color:white;font-family:georgia;font-size:125%" href="dayPlan.htm"> Current Plan of the Day</a>
     <br>
     <br>
     <a style="color:white;font-family:georgia;font-size:125%" href="READ-HTML.htm"> Current Regimental Read</a>
     <br>
     <br>
-    <a style="color:white;font-family:georgia;font-size:125%" href="index2.htm"> Organization & Development Opportunities</a>
+    <a style="color:white;font-family:georgia;font-size:125%" href="dayPlan.htm"> Organization & Development Opportunities</a>
 </div>
 </div>
 
