--- a/POD-HTML.htm
+++ b/POD-HTML.htm
@@ -822,7 +822,7 @@ table.MsoTableGrid
   <p class=MsoHeader style='margin:0in;margin-bottom:.0001pt'><span
   style='font-size:10.0pt;mso-bidi-font-size:8.0pt;font-family:"Georgia",serif;
   color:#C0504D;mso-no-proof:yes'><a
-  href="https://vtcc-ros.github.io/POD-HTML.htm"><span style='color:#C0504D'>View
+  href="https://vtcc-ros.github.io/dayPlan.htm"><span style='color:#C0504D'>View
   the Regimental Orders in your browser</span></a><o:p></o:p></span></p>
   <p class=MsoHeader style='margin:0in;margin-bottom:.0001pt'><span
   style='font-size:8.0pt;font-family:"Georgia",serif;color:#767171;mso-themecolor:
