Added Read container

--- a/READ-HTML.htm
+++ b/READ-HTML.htm
@@ -798,7 +798,7 @@ div.WordSection1
   <td width=720 colspan=19 valign=top style='width:7.5in;padding:0in 5.75pt 0in 5.75pt'>
   <p class=MsoHeader style='margin:0in;margin-bottom:.0001pt;line-height:105%'><span
   style='font-size:10.0pt;line-height:105%;font-family:"Georgia",serif;
-  color:#C0504D'><a href="https://vtcc-ros.github.io/READ-HTML.htm"><span
+  color:#C0504D'><a href="https://vtcc-ros.github.io/regiRead.htm"><span
   style='color:#C0504D'>View the Regimental Read in your browser</span></a></span><span
   style='color:#C0504D'><o:p></o:p></span></p>
   <p class=MsoHeader style='margin:0in;margin-bottom:.0001pt;line-height:105%'><span
