--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 
   <!-- Add your site or application content here -->
   <div style="font-family:georgia;">
-  <p style="color:#AF1D1D;text-align:center;font-size:350%;" >
+  <p style="color:#8B1F41;text-align:center;font-size:350%;" >
     <strong>
         VTCC Regimental Orders
     </strong>
   </p>
   <p style="text-align:center;">
-  <a style="color:#AF1D1D;font-size:175%" href="https://goo.gl/forms/w0TwJWoIoa80CuzJ2">
+  <a style="color:#8B1F41;font-size:175%" href="https://goo.gl/forms/w0TwJWoIoa80CuzJ2">
     <em>Request an Announcement in the RO's</em></a>
   </p>
 </div>
