--- a/dayPlan.htm
+++ b/dayPlan.htm
@@ -33,7 +33,23 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
+
+<div class="menuBar"
+>
+<a href="POD-HTML.htm">
+  Plan of the day
+</a>
+</div>
+  <div class="docHold">
+    <iframe class="docFrame"
+    src="POD-HTML.htm"
+    height="100%"
+    width="100%"
+    >
+  </iframe>
+  </div>
   <!-- Side navigation -->
+  <!--
   <div class="sidenav" style="font-family:georgia;">
     <a href="#">About</a>
     <a href="#">Services</a>
@@ -41,8 +57,7 @@
     <a href="#">Contact</a>
   </div>
 
-  <!-- Page content -->
-<div>
+<div width="75%">
   <iframe
   class="fullWidth"
   src="POD-HTML.htm"
@@ -50,7 +65,7 @@
   width="100%"
   >
   </iframe>
-</div>
+</div> -->
 
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
