Added final menu bar
converted links to go to new pages; added menu bars, original docs in iframe

--- a/dayPlan.htm
+++ b/dayPlan.htm
@@ -34,38 +34,19 @@
 
   <!-- Add your site or application content here -->
 
-<div class="menuBar"
->
-<a href="POD-HTML.htm">
-  Plan of the day
-</a>
+<div class="menuBar">
+  <a href="orgOps.htm">Organizations and Opportunities</a>
+  <a href="https://goo.gl/forms/w0TwJWoIoa80CuzJ2">Request an Announcement</a>
+  <a href="index.html">Home</a>
 </div>
   <div class="docHold">
     <iframe class="docFrame"
     src="POD-HTML.htm"
-    height="100%"
+    height="95%"
     width="100%"
     >
   </iframe>
   </div>
-  <!-- Side navigation -->
-  <!--
-  <div class="sidenav" style="font-family:georgia;">
-    <a href="#">About</a>
-    <a href="#">Services</a>
-    <a href="#">Clients</a>
-    <a href="#">Contact</a>
-  </div>
-
-<div width="75%">
-  <iframe
-  class="fullWidth"
-  src="POD-HTML.htm"
-  height="100%"
-  width="100%"
-  >
-  </iframe>
-</div> -->
 
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
