--- a/orgOps.htm
+++ b/orgOps.htm
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Regimental Read</title>
+  <title>Organizations and Opportunities</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -41,7 +41,7 @@
 </div>
   <div class="docHold">
     <iframe class="docFrame"
-    src="READ-HTML.htm"
+    src="POD-HTML.htm"
     height="95%"
     width="100%"
     >
