updated rest to responsive

--- a/orgOps.htm
+++ b/orgOps.htm
@@ -40,11 +40,8 @@
   <a href="index.html">Home</a>
 </div>
   <div class="docHold">
-    <iframe class="docFrame"
-    src="POD-HTML.htm"
-    height="95%"
-    width="100%"
-    >
+    <iframe 
+    src="POD-HTML.htm">
   </iframe>
   </div>
 
