--- a/regiRead.htm
+++ b/regiRead.htm
@@ -40,11 +40,8 @@
   <a href="index.html">Home</a>
 </div>
   <div class="docHold">
-    <iframe class="docFrame"
-    src="READ-HTML.htm"
-    height="95%"
-    width="100%"
-    >
+    <iframe
+    src="READ-HTML.htm">
   </iframe>
   </div>
 
