--- a/dayPlan.htm
+++ b/dayPlan.htm
@@ -40,9 +40,10 @@
   <a href="index.html">Home</a>
 </div>
   <div class="docHold">
-    <iframe
-    src="POD-HTML.htm">
-  </iframe>
+    <object
+    data="POD-HTML.htm"
+    type="text/html">
+  </object>
   </div>
 
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
