didn't work, changing back to iframe

--- a/dayPlan.htm
+++ b/dayPlan.htm
@@ -40,10 +40,9 @@
   <a href="index.html">Home</a>
 </div>
   <div class="docHold">
-    <object
-    data="POD-HTML.htm"
-    type="text/html">
-  </object>
+    <iframe
+    src="POD-HTML.htm"
+  </iframe>
   </div>
 
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
