--- a/READ-HTML.htm
+++ b/READ-HTML.htm
@@ -783,6 +783,9 @@ div.WordSection1
  <o:shapelayout v:ext="edit">
   <o:idmap v:ext="edit" data="1"/>
  </o:shapelayout></xml><![endif]-->
+
+<base target="_top">
+
 </head>
 
 <body lang=EN-US link="#0563C1" vlink="#954F72" style='tab-interval:.5in'>
