fixed vertical scrolling issues

--- a/dayPlan.htm
+++ b/dayPlan.htm
@@ -27,7 +27,7 @@
 
 </head>
 
-<body style="background-color:#FFFFFF;">
+<body class="hideScroll" style="background-color:#FFFFFF;">
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
