--- a/orgOps.htm
+++ b/orgOps.htm
@@ -27,7 +27,7 @@
 
 </head>
 
-<body style="background-color:#FFFFFF;">
+<body class="hideScroll" style="background-color:#FFFFFF;">
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
@@ -43,7 +43,7 @@
     <iframe
     src="OPS-HTML.htm">
   </iframe>
-  </div>
+</div>
 
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
